--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -83,7 +83,7 @@
 
 email {
     font-size: 14px;
-    font-family: "Ubuntu Mono";
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text", system-ui, sans-serif;
 }
 
 .icon-button i{
