--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -208,6 +208,7 @@ papertitle {
 
     .image.avatar {
       border-radius: 12px;
+      overflow: hidden;
     }
 
       .image.avatar:before {
@@ -216,8 +217,9 @@ papertitle {
 
       .image.avatar img {
         border-radius: 12px;
-        width: 45%;
-        padding: 20px;
+        width: 100%;
+        height: auto;
+        display: block;
         // border: 1px solid #ddd;
         // padding: 3px;
         // box-shadow: 0 -1px 5px 1px rgba(200, 200, 200, 0.3);
@@ -500,8 +502,9 @@ footer {
 
    .image.avatar img {
         border-radius: 12px;
-        width: 117px;
-        padding:20px;
+        width: 100%;
+        height: auto;
+        display: block;
       }
   #head1o2 {
     visibility: hidden;
@@ -556,8 +559,9 @@ footer {
 
   .image.avatar img {
       border-radius: 12px;
-      width: 95px;
-      padding:20px;
+      width: 100%;
+      height: auto;
+      display: block;
   }
   #head1o2 {
     visibility: hidden;
