--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Q835N8QDF"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3Q835N8QDF');
+    </script>
     <title>{{ site.title }} | {{site.affiliation}}</title>
 
     <meta charset="UTF-8">
