--- a/assets/css/publications.css
+++ b/assets/css/publications.css
@@ -80,3 +80,18 @@ blockquote { background: var(--global-bg-color); border-left: 2px solid var(--gl
 .publications ol.bibliography li div.abstract.hidden.open { border-color: var(--global-text-color); }
 
 .publications ol.bibliography li .teaser { border-radius: 8px; box-shadow: 3px 3px 6px #888; height: 123px; width: 270px; margin-top: 5px; margin-left: 5px; margin-bottom: 5px; object-fit: cover; }
+
+@media print, screen and (max-width: 480px) {
+  .publications ol.bibliography > br { display: none; }
+  .publications ol.bibliography li { margin-bottom: 0.75rem; min-height: 0; }
+  .publications ol.bibliography li .abbr { height: auto; margin-bottom: 0.25rem; }
+  .publications ol.bibliography li .col-sm-3,
+  .publications ol.bibliography li .col-sm-9 { padding-left: 0; padding-right: 0; }
+  .publications ol.bibliography li .teaser {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    max-height: 160px;
+    margin-left: 0;
+  }
+}
