--- a/html_source_file/assets/css/publications.css
+++ b/html_source_file/assets/css/publications.css
@@ -38,6 +38,12 @@ blockquote { background: var(--global-bg-color); border-left: 2px solid var(--gl
 
 .publications ol.bibliography { list-style: none; padding: 0; margin-top: 0; }
 
+.publications .pub-row { justify-content: flex-start; align-items: flex-start; }
+
+.publications .pub-row .col-sm-3 { padding-left: 0 !important; padding-right: 12px !important; }
+
+.publications .pub-row .col-sm-9 { padding-left: 0 !important; padding-right: 0 !important; }
+
 .publications ol.bibliography li { min-height: 110px; margin-bottom: 0.5rem; }
 
 .publications ol.bibliography li .abbr { height: 8rem; margin-bottom: 0.5rem; }
